create App.js and move header

--- a/index.html
+++ b/index.html
@@ -9,15 +9,8 @@
     <title>Formi Search</title>
   </head>
   <body>
-    <header>
-      <img src="./assets/img/logo100x100.png" alt="FormiSearch logo" />
-      <nav>
-        <ul class="nav-menu">
-          <li><a href="/" class="nav-menu-link">Home</a></li>
-          <li><a href="#" class="nav-menu-link">About</a></li>
-          <li><a href="#" class="nav-menu-link">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
+    <div id="root">not rendered</div>
+
+    <script src="./src/App.js"></script>
   </body>
 </html>
