clean code and add LICENSE and README

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Formi Search</title>
   </head>
   <body>
-    <div id="root">not rendered</div>
+    <div id="root"></div>
 
     <script src="./src/App.js"></script>
   </body>
