--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
     <title>Formi Search</title>
   </head>
   <body>
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <textarea name="message"></textarea>
+    </form>
+
     <div id="root"></div>
 
     <script src="./src/App.js"></script>
