add seo meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <meta
+      property="og:title"
+      content="Formi Search - Search ants species by country"
+    />
+    <meta property="og:locale" content="en_US" />
+    <meta
+      name="description"
+      content="Formi Search is a search engine to find ant species by country. It uses the AntWeb dataset via the GBIF API."
+    />
+    <meta
+      property="og:description"
+      content="Formi Search is a search engine to find ant species by country. It uses the AntWeb dataset via the GBIF API."
+    />
+    <link rel="canonical" href="https://www.formisearch.com/" />
+    <meta property="og:url" content="https://www.formisearch.com/" />
+    <meta property="og:site_name" content="Formi Search" />
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
     <link
       href="https://fonts.googleapis.com/css?family=Merriweather:400,700|Open+Sans:400,600&display=swap"
@@ -11,7 +27,7 @@
     />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
-    <title>Formi Search</title>
+    <title>Formi Search - Search ants species by country</title>
   </head>
   <body>
     <form name="contact" netlify netlify-honeypot="bot-field" hidden>
